# Semiprime-factorization

./: .gitignore  ACCESS_MODEL_REQUIREMENTS.md  BARRIER_THEOREM.md  LICENSE  QRP_RESEARCH.md  README.md  SUMMARY.md
rust/: BONUS.md  Cargo.toml  alpha_evolve_analysis.json  alpha_evolve_checkpoint_final.json  benchmark_all.py  benchmark_script.py  out.txt
rust/ai-guided/: Cargo.toml
rust/ai-guided/src/: lib.rs  main.rs
rust/alpha-evolve/: Cargo.toml
rust/alpha-evolve/src/: analysis.rs  evolution.rs  fitness.rs  lib.rs  macros.rs  main.rs  novelty.rs  primitives.rs  symreg.rs
rust/alpha-evolve/tests/: integration_tests.rs
rust/benchmarks/: Cargo.toml
rust/benchmarks/benches/: factoring.rs
rust/benchmarks/src/: lib.rs  scaling.rs
rust/benchmarks/tests/: integration.rs
rust/block-wiedemann/: Cargo.toml
rust/block-wiedemann/src/: cpu.rs  gpu.rs  lib.rs  main.rs  matrix.rs  shader.metal
rust/cado-evolve/: Cargo.toml
rust/cado-evolve/results/: 150bit_frozen_result.json  160bit_frozen_result.json
rust/cado-evolve/src/: analysis.rs  batch.rs  benchmark.rs  cado.rs  evolution.rs  fitness.rs  lib.rs  main.rs  params.rs  scaling.rs  validation.rs
rust/cf-factor/: Cargo.toml
rust/cf-factor-ms/: Cargo.toml
rust/cf-factor-ms/src/: bsgs.rs  class_number_real.rs  infrastructure.rs  lib.rs  main.rs  pipeline.rs  regulator_guided.rs
rust/cf-factor/src/: cf.rs  factor.rs  forms.rs  lib.rs  main.rs  regulator.rs  squfof.rs
rust/class-number-oracle/: Cargo.toml
rust/class-number-oracle/src/: class_number.rs  discriminant_analysis.rs  eichler_selberg.rs  lib.rs  main.rs
rust/classical-nfs/: Cargo.toml
rust/classical-nfs/src/: factor.rs  lib.rs  linalg.rs  main.rs  pipeline.rs  polynomial.rs  relation.rs  sieve.rs
rust/compression-factor/: Cargo.toml
rust/compression-factor/src/: lib.rs  main.rs
rust/data/: E20_audit_results.json  E20_scaling_results.json  E21_control_results.json  E21_fourier_scaling.json  E21b_prime_restricted.json  E21b_smoothness_spectrum.json  E21b_stress_tests.json  E24b_nfs_validation.json  E25_character_audit.json  E25b_prime_restricted.json  E25b_smoothness_spectrum.json  E28_nfs_lattice.json  E28c_nfs_robustness.json
rust/data/e29_scaling/: production_results.json  specialq_results.json
rust/docs/plans/: 2026-02-28-gnfs-m1-plan.md  2026-02-28-gnfs-production-design.md
rust/ecm/: Cargo.toml
rust/ecm/src/: ecm.metal  gpu.rs  lib.rs  main.rs
rust/eigenvector-character/: Cargo.toml
rust/eigenvector-character/data/: E21c_cross_channel.json  E26_sieve_enrichment.json  E26_sieve_enrichment_highpower.json
rust/eigenvector-character/src/: algebra.rs  eigen.rs  lib.rs  main.rs
rust/eisenstein-hunt/: Cargo.toml
rust/eisenstein-hunt/src/: arith.rs  candidates.rs  lib.rs  main.rs
rust/factoring-core/: Cargo.toml
rust/factoring-core/src/: lib.rs
rust/gnfs/: Cargo.toml
rust/gnfs/src/: arith.rs  lattice.rs  lib.rs  linalg.rs  linalg_bw.rs  linalg_wiedemann.rs  log.rs  main.rs  params.rs  pipeline.rs  polyselect.rs  relation.rs  sieve.rs  sqrt.rs  types.rs
rust/gnfs/src/polyselect/: mod.rs  (+4 more)
rust/gnfs/tests/: integration.rs
rust/group-structure/: Cargo.toml
rust/group-structure/src/: chebotarev.rs  lib.rs  main.rs
rust/ising-factoring/: Cargo.toml
rust/ising-factoring/src/: lib.rs  main.rs
rust/l-function-factoring/: Cargo.toml
rust/l-function-factoring/src/: characters.rs  class_number.rs  complex.rs  factor.rs  gauss_sums.rs  l_function.rs  lib.rs  main.rs  sampling.rs
rust/l-function-factoring/tests/: integration_tests.rs
rust/lattice-reduction/: Cargo.toml
rust/lattice-reduction/src/: bkz.rs  lib.rs  main.rs
rust/mla-number-theory/: Cargo.toml
rust/mla-number-theory/src/: lib.rs  main.rs
rust/multi-base/: Cargo.toml
rust/multi-base/src/: lib.rs  main.rs
rust/nfs-pillar-3/: Cargo.toml
rust/nfs-pillar-3/src/: lib.rs  ml_sparsification.rs  rdma_clustering.rs
rust/nfs-tn-hybrid/: Cargo.toml
rust/nfs-tn-hybrid/src/: hamiltonian.rs  lib.rs  main.rs  pipeline.rs
rust/novel-relation-sampler/: Cargo.toml
rust/novel-relation-sampler/src/: lib.rs  logger.rs  main.rs  production.rs  sampler.rs  scaling.rs  sieve_mcmc.rs  smoothness.rs  specialq.rs
rust/path-sum-degree/: Cargo.toml
rust/path-sum-degree/src/: degree.rs  lib.rs  main.rs  scaling.rs
rust/potapov-nfs/: Cargo.toml  progress.md
rust/potapov-nfs/.cargo/: config.toml
rust/potapov-nfs/scripts/: bench_cado_vs_potapov_nfs.py  c45_quality_probe.py  check_c30_completion.py  check_remap_regression.py  front_half_ablation.py  sweep_c30_completion_minimizer.py  sweep_c45_poly_variants.py  sweep_factor_configs.py  sweep_kernel_health.py  sweep_sqrt_diagnostics.py
rust/potapov-nfs/src/: ecm.rs  factorbase.rs  filter.rs  lib.rs  lp_key.rs  main.rs  params.rs  partial_merge.rs  pipeline.rs  relation.rs
rust/quantum-inspired/: Cargo.toml
rust/quantum-inspired/src/: lib.rs  main.rs
rust/rust-nfs/: Cargo.toml
rust/rust-nfs/scripts/: bench_cado_vs_rust_nfs.py  c45_quality_probe.py  check_c30_completion.py  check_remap_regression.py  front_half_ablation.py  sweep_c30_completion_minimizer.py  sweep_kernel_health.py
rust/rust-nfs/src/: arith.rs  ecm.rs  factorbase.rs  filter.rs  lib.rs  main.rs  params.rs  partial_merge.rs  pipeline.rs  relation.rs  timing.rs
rust/smooth-pilatte/: Cargo.toml
rust/smooth-pilatte/src/: enumerate.rs  extract.rs  lattice.rs  lib.rs  main.rs  relations.rs
rust/spectral-factoring/: Cargo.toml
rust/spectral-factoring/src/: atkin_lehner.rs  dimension.rs  hecke.rs  lib.rs  main.rs  modular_symbols.rs  spectral.rs
rust/spectral-factoring/tests/: integration_tests.rs
rust/ssd-factoring/: Cargo.toml
rust/ssd-factoring/src/: binary_lift.rs  crt_parallel.rs  lib.rs  main.rs  ntt_domain.rs
rust/tnss-factoring/: Cargo.toml
rust/tnss-factoring/src/: lattice.rs  lib.rs  main.rs  opes.rs  optimizer.rs  relations.rs  sr_pairs.rs  tensor.rs  ttn.rs
rust/tnss-factoring/tests/: integration.rs
rust/trace-lattice/: Cargo.toml
rust/trace-lattice/src/: factor.rs  lattice.rs  lib.rs  main.rs  trace.rs
(+140 files in other folders)
