[package]
name = "ai-guided"
version = "0.1.0"
edition = "2021"
description = "ML-guided factoring search strategies"

[dependencies]
factoring-core = { path = "../factoring-core" }
mla-number-theory = { path = "../mla-number-theory" }
num-bigint = { workspace = true }
num-traits = { workspace = true }
num-integer = { workspace = true }
rayon = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[[bin]]
name = "ai-guided"
path = "src/main.rs"
