[package]
name = "alpha-evolve"
version = "0.1.0"
edition = "2021"

[dependencies]
num-bigint = { workspace = true }
num-traits = { workspace = true }
num-integer = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
factoring-core = { path = "../factoring-core" }
cf-factor = { path = "../cf-factor" }
ecm = { path = "../ecm" }
lattice-reduction = { path = "../lattice-reduction" }
smooth-pilatte = { path = "../smooth-pilatte" }
cf-factor-ms = { path = "../cf-factor-ms" }
