[package]
name = "block-wiedemann"
version = "0.1.0"
edition = "2021"
description = "GPU-accelerated Block Wiedemann over GF(2) via Metal"

[dependencies]
rayon = "1.11.0"
num-bigint = "0.4.6"
num-traits = "0.2.19"
rand = "0.8.5"
thiserror = "1.0.64"

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.29.0"
