[package]
name = "cado-evolve"
version = "0.1.0"
edition = "2021"
description = "Evolutionary GNFS parameter optimization via CADO-NFS"

[dependencies]
num-bigint = { workspace = true }
num-traits = { workspace = true }
num-integer = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = "1.0"
tempfile = "3.10"
log = "0.4"
env_logger = "0.11"
factoring-core = { path = "../factoring-core" }
