[package]
name = "class-number-oracle"
version = "0.1.0"
edition = "2021"
description = "Fast class number computation and Eichler-Selberg trace formula analysis"

[dependencies]
num-bigint = { workspace = true }
num-traits = { workspace = true }
num-integer = { workspace = true }
rand = { workspace = true }
