[package]
name = "ecm"
version = "0.1.0"
edition = "2021"
description = "Elliptic Curve Method (Lenstra) for integer factorization"

[dependencies]
factoring-core = { path = "../factoring-core" }
num-bigint = { workspace = true }
num-traits = { workspace = true }
num-integer = { workspace = true }
rayon = { workspace = true }
rand = { workspace = true }

[[bin]]
name = "ecm"
path = "src/main.rs"
