[package]
name = "factoring-core"
version = "0.1.0"
edition = "2021"
description = "Shared types, BigUint utilities, RSA key generation, and multi-base representation"

[dependencies]
num-bigint = { workspace = true }
num-traits = { workspace = true }
num-integer = { workspace = true }
num-prime = { workspace = true }
rayon = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
