[package]
name = "gnfs"
version = "0.1.0"
edition = "2021"
description = "Production GNFS implementation targeting 130+ digit factorization"

[dependencies]
rug = { version = "1", features = ["integer", "rand"] }
gmp-mpfr-sys = { version = "1", features = ["mpc"] }
rayon = "1.10"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
rand_chacha = "0.3"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
