[package]
name = "group-structure"
version = "0.1.0"
edition = "2021"
description = "Group-theoretic analysis of Z/nZ for factorization insights"

[dependencies]
factoring-core = { path = "../factoring-core" }
num-bigint = { workspace = true }
num-traits = { workspace = true }
num-integer = { workspace = true }
rayon = { workspace = true }
rand = { workspace = true }

[[bin]]
name = "group-structure"
path = "src/main.rs"
