[package]
name = "ising-factoring"
version = "0.1.0"
edition = "2021"
description = "QUBO/Ising model factorization with simulated annealing and parallel tempering"

[dependencies]
factoring-core = { path = "../factoring-core" }
num-bigint = { workspace = true }
num-traits = { workspace = true }
num-integer = { workspace = true }
rayon = { workspace = true }
rand = { workspace = true }

[[bin]]
name = "ising-factoring"
path = "src/main.rs"
