[package]
name = "lattice-reduction"
version = "0.1.0"
edition = "2021"
description = "LLL and SVP-based factoring (testing Schnorr's approach)"

[dependencies]
factoring-core = { path = "../factoring-core" }
num-bigint = { workspace = true }
num-traits = { workspace = true }
num-integer = { workspace = true }
rayon = { workspace = true }
rand = { workspace = true }
rug = "1.28.1"

[[bin]]
name = "lattice-reduction"
path = "src/main.rs"
