[package]
name = "mla-number-theory"
version = "0.1.0"
edition = "2021"
description = "Low-rank compression of number-theoretic data inspired by DeepSeek MLA"

[dependencies]
factoring-core = { path = "../factoring-core" }
num-bigint = { workspace = true }
num-traits = { workspace = true }
num-integer = { workspace = true }
rayon = { workspace = true }
rand = { workspace = true }

[[bin]]
name = "mla-number-theory"
path = "src/main.rs"
