[package]
name = "multi-base"
version = "0.1.0"
edition = "2021"
description = "Multi-base number representations for pattern analysis (binary, base-6, primorial, RNS)"

[dependencies]
factoring-core = { path = "../factoring-core" }
num-bigint = { workspace = true }
num-traits = { workspace = true }
num-integer = { workspace = true }
rayon = { workspace = true }
rand = { workspace = true }

[[bin]]
name = "multi-base"
path = "src/main.rs"
