[package]
name = "nfs-pillar-3"
version = "0.1.0"
edition = "2021"
description = "Pillar 3: Architectural Innovation (Zero-I/O and ML Sparsification)"

[dependencies]
num-bigint = { workspace = true }
num-traits = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
crossbeam = "0.8"
ndarray = "0.15"
thiserror = "1.0"
log = "0.4"
