[package]
name = "potapov-nfs"
version = "0.1.0"
edition = "2021"
description = "Production NFS implementation — bucket sieve + special-q lattice sieve"

[dependencies]
gnfs = { path = "../gnfs" }
rug = { version = "1", features = ["integer", "rand"] }
rayon = "1.10"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
