[package]
name = "quantum-inspired"
version = "0.1.0"
edition = "2021"
description = "Classical simulation of quantum factoring ideas (period-finding, dequantization)"

[dependencies]
factoring-core = { path = "../factoring-core" }
num-bigint = { workspace = true }
num-traits = { workspace = true }
num-integer = { workspace = true }
rayon = { workspace = true }
rand = { workspace = true }

[[bin]]
name = "quantum-inspired"
path = "src/main.rs"
